--- a/index.html
+++ b/index.html
@@ -1,1 +1,35 @@
+<!DOCTYPE html>
+<html lang="en-us">
+<head>
+	<meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+		type="text/css" />
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+		type="text/css" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css"
+		type="text/css" />
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css" />    
+    <title>EXO BAND</title>
+</head>
 
+<body>
+<header>
+
+</header>
+<!--About section-->
+<section class="container-fluid">
+<div class="about-section-container">
+<div class="row">
+<div class="col-12">
+</div>
+</div>
+</div>
+</section>
+
+<footer>
+</footer>
+
+</body>
+</html>
