--- a/index.html
+++ b/index.html
@@ -18,16 +18,22 @@
 <header>
 
 </header>
-<!--About section-->
-<section class="container-fluid">
-<div class="about-section-container">
-<div class="row">
-<div class="col-12">
-</div>
-</div>
-</div>
-</section>
+<!--Introduction section-->
+<section class="container-fluid about-section-container">
+	<div class="row jumbtron">
+		<div class="col-12">
+			<div class="intro-part">
+            <img src="images\exo-logo2.jpg" class="img-fluid float-left" alt="logo" width="100" height="100">
+			</div>
+            <div class="col">
+			<h1 class="introduction-header">EXO</h1>
 
+			<p class="intro-statement"> We are One</p>
+            </div>
+			
+		</div>
+	</div>
+</section>
 <footer>
 </footer>
 
