--- a/index.html
+++ b/index.html
@@ -19,21 +19,16 @@
 
 </header>
 <!--Introduction section-->
-<section class="container-fluid about-section-container">
-	<div class="row jumbtron">
-		<div class="col-12">
-			<div class="intro-part">
-            <img src="images\exo-logo2.jpg" class="img-fluid float-left" alt="logo" width="100" height="100">
+<div class="about-section-container">
+	<section class="container-fluid">
+		<div class="jumbotron jumbotron-fluid">
+			<div class="container">
+				<h1 class="display-4">EXO BAND</h1>
+				<h2 class="lead intro-statement">we are ONE!!!</h2>
 			</div>
-            <div class="col">
-			<h1 class="introduction-header">EXO</h1>
-
-			<p class="intro-statement"> We are One</p>
-            </div>
-			
 		</div>
-	</div>
-</section>
+	</section>
+</div>
 <footer>
 </footer>
 
