adding styles to the home page

--- a/index.html
+++ b/index.html
@@ -19,16 +19,23 @@
 
 </header>
 <!--Introduction section-->
-<div class="about-section-container">
-	<section class="container-fluid">
-		<div class="jumbotron jumbotron-fluid">
-			<div class="container">
-				<h1 class="display-4">EXO BAND</h1>
-				<h2 class="lead intro-statement">we are ONE!!!</h2>
-			</div>
-		</div>
-	</section>
+<div class="container-fluid introduction-section-container">
+
+<div class="row intro-portion">
+<div class="col-md-6">
+<div class="d-none d-sm-block">
+<img src="assets/images/exo-logo2.jpg" class="img-fluid img-thumbnail justify-center intro-pic" alt="logo">
 </div>
+</div>
+<div class="col-sm-3 col-md-6">
+<h1 class="introduction-header display-4 text-center"><strong>EXO</strong></h1>
+<p class="lead intro-statement text-center">We are One !!</p>
+</div>
+</div>
+</div>
+
+<!--end of Introduction section-->
+
 <footer>
 </footer>
 
