added about section

--- a/index.html
+++ b/index.html
@@ -21,21 +21,41 @@
 <!--Introduction section-->
 <div class="container-fluid introduction-section-container">
 
-<div class="row intro-portion">
-<div class="col-md-6">
-<div class="d-none d-sm-block">
-<img src="assets/images/exo-logo2.jpg" class="img-fluid img-thumbnail justify-center intro-pic" alt="logo">
+	<div class="row intro-portion">
+		<div class="col-md-4">
+			<div class="d-none d-sm-block">
+				<img src="assets/images/exo-logo2.jpg" class="img-fluid img-thumbnail justify-center intro-pic" alt="logo">
 </div>
-</div>
-<div class="col-sm-3 col-md-6">
-<h1 class="introduction-header display-4 text-center"><strong>EXO</strong></h1>
-<p class="lead intro-statement text-center">We are One !!</p>
-</div>
-</div>
-</div>
-
+			</div>
+			<div class="col-sm-6 col-md-5">
+				<h1 class="introduction-header display-4 text-center"><strong>EXO</strong></h1>
+				<p class="lead intro-statement text-center">We are One !!</p>
+			</div>
+		</div>
+	</div>
 <!--end of Introduction section-->
-
+<!--about section-->
+	<div class="container-fluid about-container">
+		<div class="row">
+			<!--about picture section-->
+			<div class="col-md-6 about-picture">
+	
+			</div>
+			<!--about text section-->
+			<div class="col-md-6">
+				<h1 class="about-title"><strong> About Us </strong></h1>
+				<hr class="about-underline">
+				<p class="lead about-para">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione deleniti
+					officia rem id accusamus expedita veniam alias optio provident placeat blanditiis, quas temporibus
+					consequuntur repellat totam ad tenetur nihil distinctio.</p>
+                <p class="lead about-para">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione deleniti
+					officia rem id accusamus expedita veniam alias optio provident placeat blanditiis, quas temporibus
+					consequuntur repellat totam ad tenetur nihil distinctio.</p>
+			</div>
+	
+		</div>
+	</div>
+<!--end of about section-->
 <footer>
 </footer>
 
