added social media links

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 		</div>
 	</div>
 <!--end of about section-->
-<footer>
+
 <!--Social media footer section-->
 <div class="container-fluid padding">
 	<div class="row text-center padding">
@@ -102,6 +102,20 @@
 </div>
 
 <!--end of social media footer section-->
+
+<footer>
+<div class="container-fluid footer-section-container padding">
+<div class="row text-center">
+<div class="col-12">
+<h4>Sign Up for an Early Member Now !! Hurry Up !!!</h4>
+<button class="btn btn-info btn-md" data-toggle="modal" data-target="#signUpModal"> Sign Up Now!</button>
+</div>
+<div class="col-12">
+<hr>
+<h5> &copy; All rights reserved: Exo Group</h5>
+</div>
+</div>
+</div>
 </footer>
 </body>
 </html>
