Updating index page

--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
 					<div class="collapse navbar-collapse" id="navbarNav">
 						<ul class="navbar-nav ml-auto">
 							<li class="nav-item">
-								<a class="nav-link active" href="#">Home</a>
+								<a class="nav-link active hvr-sweep-to-bottom" href="#">Home</a>
 							</li>
 
 							<li class="nav-item">
-								<a class="nav-link" href="#">Gallery</a>
+								<a class="nav-link hvr-sweep-to-bottom" href="#">Gallery</a>
 							</li>
 
 							<li class="nav-item">
-								<a class="nav-link" href="#">Music</a>
+								<a class="nav-link hvr-sweep-to-bottom" href="#">Music</a>
 							</li>
 
 							<li class="nav-item">
-								<a class="nav-link" href="#">Tour</a>
+								<a class="nav-link hvr-sweep-to-bottom" href="#">Tour</a>
 							</li>
 						</ul>
 
@@ -60,7 +60,7 @@
 				</div>
 				<div class="col-sm-6 col-md-5">
 					<h1 class="introduction-header display-4 text-center"><strong>EXO</strong></h1>
-					<p class="lead intro-statement text-center">We are One !!</p>
+					<p class="lead intro-statement text-center">We are One</p>
 				</div>
 			</div>
 		</div>
@@ -85,6 +85,12 @@
 						officia rem id accusamus expedita veniam alias optio provident placeat blanditiis, quas
 						temporibus
 						consequuntur repellat totam ad tenetur nihil distinctio.</p>
+                    <p class="lead about-para">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione
+						deleniti
+						officia rem id accusamus expedita veniam alias optio provident placeat blanditiis, quas
+						temporibus
+						consequuntur repellat totam ad tenetur nihil distinctio.</p>
+                    
 				</div>
 
 			</div>
@@ -92,16 +98,24 @@
 		<!--end of about section-->
 
 		<!--Social media connect section-->
-		<div class="container-fluid padding">
+		<div class="container-fluid social-media-container padding">
 			<div class="row text-center padding">
 				<div class="col-12">
-					<h2>Connect</h2>
+					<h1 class="social-connect">Connect</h1>
 				</div>
 				<div class="col-12 social-links padding">
-					<a href="#"><i class="fa fa-facebook"></i></a>
-					<a href="#"><i class="fa fa-twitter"></i></a>
-					<a href="#"><i class="fa fa-instagram"></i></a>
-					<a href="#"><i class="fa fa-youtube"></i></a>
+					<a href="#"><i class="fa fa-facebook"></i>
+                    <span class="sr-only">Facebook</span>
+                    </a>
+					<a href="#"><i class="fa fa-twitter"></i>
+                    <span class="sr-only">Twitter</span>
+                    </a>
+					<a href="#"><i class="fa fa-instagram"></i>
+                    <span class="sr-only">Instagram</span>
+                    </a>
+					<a href="#"><i class="fa fa-youtube"></i>
+                    <span class="sr-only">You Tube</span>
+                    </a>
 				</div>
 			</div>
 		</div>
