--- a/gallery.html
+++ b/gallery.html
@@ -65,38 +65,29 @@
 			</div>
 		</div>
 		<!--end of Introduction section-->
-		<!--about section-->
-		<div class="container-fluid about-container">
-			<div class="row">
-				<!--about picture section-->
-				<div class="col-md-6 col-lg-4 about-picture">
-				</div>
-				<!--about text section-->
-				<div class="col-sm-4 col-md-6 col-lg-8">
-					<h1 class="about-title"><strong> About Us </strong></h1>
-					<hr class="about-underline">
-					<p class="lead about-para">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione
-						deleniti
-						officia rem id accusamus expedita veniam alias optio provident placeat blanditiis, quas
-						temporibus
-						consequuntur repellat totam ad tenetur nihil distinctio.</p>
-					<p class="lead about-para">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione
-						deleniti
-						officia rem id accusamus expedita veniam alias optio provident placeat blanditiis, quas
-						temporibus
-						consequuntur repellat totam ad tenetur nihil distinctio.</p>
-                    <p class="lead about-para">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione
-						deleniti
-						officia rem id accusamus expedita veniam alias optio provident placeat blanditiis, quas
-						temporibus
-						consequuntur repellat totam ad tenetur nihil distinctio.</p>
-                    
-				</div>
 
-			</div>
-		</div>
-		<!--end of about section-->
-
+		
+        <!--picture gallery of exo-->
+        <section class="picture-gallery">
+        <div class="container">
+        <div class="heading">
+        <h1> Photo Gallery</h1>
+        <div class="row">
+        <div class="col-sm-6 col-md-3 col-lg-4">
+        <div class="card border-0 transform-on-hover">
+        <a class="lightbox" href="assets/imagesone/img1.jpg"><img src="assets/imagesone/img1.jpg" class="card-img-top"></a>
+        </div>
+        <div class="card-body">
+        <h6>Img1</h6>
+        <p class="text-muted">This is just a scenary</p>
+        </div>
+        </div>
+        </div>
+        </div>
+        </div>
+        </section>
+        
+        <!--end of picture gallery of exo-->
 		<!--Social media connect section-->
 		<div class="container-fluid social-media-container padding">
 			<div class="row text-center padding">
