doing more styles to gallery in galleryone file

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 						<h4 class="signup-text">Sign Up Now for an Early Member!! Hurry Up!!</h4>
 					</div>
 					<div class="col-12">
-						<button type="button" class= "btn btn-info btn--footer" data-toggle="modal" data-target="#signUpModal"> Sign Up Now!</button>
+						<button type="button" class= "btn btn-secondary btn--footer" data-toggle="modal" data-target="#signUpModal"> Sign Up Now!</button>
 						
 					</div>
 					<div class="col-12">
