added music page

--- a/galleryone.html
+++ b/galleryone.html
@@ -64,8 +64,8 @@
 			<!-- start of Modal 1 !-->
 			<div class="col-lg-3 col-md-4 col-sm-6 gallery-column">
 
-				<a class="d-block">
-					<img class="gallery-image" src="imagesone/img1.jpg" data-toggle="modal" data-target="#image-one">
+				<a class="">
+					<img class="gallery-image hvr-grow-shadow" src="imagesone/img1.jpg" data-toggle="modal" data-target="#image-one">
                     </a>
 
 					<!-- start of Modal Body 1 !-->
@@ -92,7 +92,7 @@
                     <!-- start of Modal 2 !-->
 					<div class="col-lg-3 col-md-4 col-sm-6 gallery-column">
 						<a class="d-block">
-							<img class="gallery-image" src="imagesone/img2.jpg" data-toggle="modal" data-target="#image-two">
+							<img class="gallery-image hvr-grow-shadow" src="imagesone/img2.jpg" data-toggle="modal" data-target="#image-two">
                     </a>
 
 							<!-- start of Modal Body 2 !-->
@@ -120,7 +120,7 @@
 							<div class="col-lg-3 col-md-4 col-sm-6 gallery-column">
 
                             <a class="d-block">
-					<img class="gallery-image" src="imagesone/img3.jpg" data-toggle="modal" data-target="#image-three">
+					<img class="gallery-image hvr-grow-shadow" src="imagesone/img3.jpg" data-toggle="modal" data-target="#image-three">
                     </a>
 
 					<!-- start of Modal Body 3 !-->
@@ -147,7 +147,7 @@
 
 							<div class="col-lg-3 col-md-4 col-sm-6 gallery-column">
 								<a class="d-block">
-					<img class="gallery-image" src="imagesone/img4.jpg" data-toggle="modal" data-target="#image-four">
+					<img class="gallery-image hvr-grow-shadow" src="imagesone/img4.jpg" data-toggle="modal" data-target="#image-four">
                     </a>
 
 					<!-- start of Modal Body 4 !-->
@@ -174,7 +174,7 @@
                         <!--start of modal 5-->
 							<div class="col-lg-3 col-md-4 col-sm-6 gallery-column">
 								<a class="d-block">
-					<img class="gallery-image" src="imagesone/img5.jpg" data-toggle="modal" data-target="#image-five">
+					<img class="gallery-image hvr-grow-shadow" src="imagesone/img5.jpg" data-toggle="modal" data-target="#image-five">
                     </a>
 
 					<!-- start of Modal Body 5 !-->
@@ -200,7 +200,7 @@
                         <!--start of modal 6-->
 							<div class="col-lg-3 col-md-4 col-sm-6 gallery-column">
 								<a class="d-block">
-					<img class="gallery-image" src="imagesone/img6.jpg" data-toggle="modal" data-target="#image-six">
+					<img class="gallery-image hvr-grow-shadow" src="imagesone/img6.jpg" data-toggle="modal" data-target="#image-six">
                     </a>
 
 					<!-- start of Modal Body 6 !-->
@@ -226,7 +226,7 @@
                         <!--start of modal 7-->
 							<div class="col-lg-3 col-md-4 col-sm-6 gallery-column">
 								<a class="d-block">
-					<img class="gallery-image" src="imagesone/img7.jpg" data-toggle="modal" data-target="#image-seven">
+					<img class="gallery-image hvr-grow-shadow" src="imagesone/img7.jpg" data-toggle="modal" data-target="#image-seven">
                     </a>
 
 					<!-- start of Modal Body 7!-->
@@ -252,7 +252,7 @@
                         <!--start of modal 8-->
 							<div class="col-lg-3 col-md-4 col-sm-6 gallery-column">
 								<a class="d-block">
-					<img class="gallery-image" src="imagesone/img8.jpg" data-toggle="modal" data-target="#image-eight">
+					<img class="gallery-image hvr-grow-shadow" src="imagesone/img8.jpg" data-toggle="modal" data-target="#image-eight">
                     </a>
 
 					<!-- start of Modal Body 8 !-->
