--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 							</li>
 
 							<li class="nav-item">
-								<a class="nav-link hvr-sweep-to-bottom" href="#">Music</a>
+								<a class="nav-link hvr-sweep-to-bottom" href="music.html">Music</a>
 							</li>
 
 							<li class="nav-item">
