adding more pictures for selling videos

--- a/music.html
+++ b/music.html
@@ -135,7 +135,74 @@
 	<!--end of music listening section of exo-->
 
     <!--start of video selling section-->
+    <div class="container-fluid">
+    <div class="row">
+    <!--first column-->
+    <div class="col-md-6 col-sm-12 align-items-center">
 
+    <!--start of first card for video section-->
+
+    <div class="card align-items-center" style="width: 18rem;">
+  <img class="card-img-top video-image" src="assets/images/exo-obsession.jpg" alt="Exo obsession album">
+  <div class="card-body">
+    <p class="card-text">Exo obsession video</p>
+
+        <!--drop down section-->
+
+        <div class="dropdown">
+  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    Buy Now
+  </button>
+  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+    <a class="dropdown-item" href="#">Amazon Prime</a>
+    <a class="dropdown-item" href="#">Apple Music</a>
+    
+  </div>
+</div>
+
+    <!--end of drop down section-->
+
+  </div>
+</div>
+
+    <!--end of first card video section-->
+    </div>
+     <!--end of first column-->
+
+     <!--second column-->
+    <div class="col-md-6 col-sm-12 align-items-center">
+
+    <!--start of second card for video section-->
+
+    <div class="card align-items-center" style="width: 18rem;">
+  <img class="card-img-top video-image" src="assets/images/dont-messup-my-tempo.jpg" alt="Exo obsession album">
+  <div class="card-body">
+    <p class="card-text">Dont Mess My Tempo</p>
+
+        <!--drop down section-->
+
+        <div class="dropdown">
+  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    Buy Now
+  </button>
+  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+    <a class="dropdown-item" href="#">Amazon Prime</a>
+    <a class="dropdown-item" href="#">Apple Music</a>
+    
+  </div>
+</div>
+
+    <!--end of drop down section-->
+
+  </div>
+</div>
+
+    <!--end of second card video section-->
+    </div>
+     <!--end of second column-->
+
+    </div>
+    </div>
 
 
     <!--end of video selling section-->
