added background pics to music page

--- a/galleryone.html
+++ b/galleryone.html
@@ -22,10 +22,10 @@
 		<nav class="navbar navbar-expand-md navbar-light bg-danger sticky-top navbar-section">
 			<div class="container-fluid">
 				<a class="navbar-brand"
-					href="#"><img src="assets/images/Picture2.png" alt="navbar logo" class="img-fluid navbar-logo"></a>
+					href="#"><img src="assets/images/new-logo.png" alt="navbar logo" class="img-fluid navbar-logo"></a>
 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
-<span class="navbar-toggler-icon"></span>
-</button>
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
 					<div class="collapse navbar-collapse" id="navbarNav">
 						<ul class="navbar-nav ml-auto">
 							<li class="nav-item">
@@ -50,7 +50,9 @@
 		</nav>
 		<!--end of Navigation bar section-->
 	</header>
+
 	<!--Gallery Jumbotron heading section-->
+
 	<div class="jumbotron text-center gallery-jumbotron">
 		<h1> Exo Image Gallery</h1>
 		<p class="lead"> Below You can find your favourite clicks of Exo!!!</p>
@@ -59,14 +61,17 @@
 
 
 	<!--picture gallery of exo-->
+
 	<div class="container picture-gallery">
 		<div class="row">
+
 			<!-- start of Modal 1 !-->
+
 			<div class="col-lg-3 col-md-4 col-sm-6 gallery-column">
 
 				<a class="">
 					<img class="gallery-image hvr-grow-shadow" src="imagesone/img1.jpg" data-toggle="modal" data-target="#image-one">
-                    </a>
+                </a>
 
 					<!-- start of Modal Body 1 !-->
 					<div class="modal" tabindex="-1" role="dialog" id="image-one" aria-hidden="true">
@@ -90,10 +95,11 @@
 					<!-- end of Modal 1 !-->
 
                     <!-- start of Modal 2 !-->
+
 					<div class="col-lg-3 col-md-4 col-sm-6 gallery-column">
 						<a class="d-block">
 							<img class="gallery-image hvr-grow-shadow" src="imagesone/img2.jpg" data-toggle="modal" data-target="#image-two">
-                    </a>
+                         </a>
 
 							<!-- start of Modal Body 2 !-->
 							<div class="modal" tabindex="-1" role="dialog" id="image-two" aria-hidden="true">
@@ -101,12 +107,12 @@
 									<div class="modal-content">
 										<div class="modal-header">
 											<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                    </button>
+                                                <span aria-hidden="true">&times;</span>
+                                            </button>
 										</div>
 										<div class="modal-body">
 											<img class="image-width" src="imagesone/img2.jpg" data-toggle="modal" data-target="#image-two">
-				</div>
+				                        </div>
 
 										</div>
 									</div>
@@ -117,13 +123,15 @@
                             <!-- end of Modal 2 !-->
 
                             <!-- start of Modal 3 !-->
-							<div class="col-lg-3 col-md-4 col-sm-6 gallery-column">
 
-                            <a class="d-block">
-					<img class="gallery-image hvr-grow-shadow" src="imagesone/img3.jpg" data-toggle="modal" data-target="#image-three">
-                    </a>
+							<div class="col-lg-3 col-md-4 col-sm-6 gallery-column">
+							
+								<a class="d-block">
+									<img class="gallery-image hvr-grow-shadow" src="imagesone/img3.jpg" data-toggle="modal" data-target="#image-three">
+							    </a>
 
 					<!-- start of Modal Body 3 !-->
+
 					<div class="modal" tabindex="-1" role="dialog" id="image-three" aria-hidden="true">
 						<div class="modal-dialog" role="document">
 							<div class="modal-content">
@@ -141,16 +149,18 @@
 						</div>
 						<!-- end of Modal body 3 !-->
 
-							</div>
-                            <!-- end of Modal 3 !-->
-                            <!--start of modal 4-->
+					</div>
 
-							<div class="col-lg-3 col-md-4 col-sm-6 gallery-column">
-								<a class="d-block">
+                    <!-- end of Modal 3 !-->
+                    <!--start of modal 4-->
+
+					<div class="col-lg-3 col-md-4 col-sm-6 gallery-column">
+					<a class="d-block">
 					<img class="gallery-image hvr-grow-shadow" src="imagesone/img4.jpg" data-toggle="modal" data-target="#image-four">
                     </a>
 
 					<!-- start of Modal Body 4 !-->
+
 					<div class="modal" tabindex="-1" role="dialog" id="image-four" aria-hidden="true">
 						<div class="modal-dialog" role="document">
 							<div class="modal-content">
