--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<nav class="navbar navbar-expand-md navbar-light bg-danger sticky-top navbar-section">
 			<div class="container-fluid">
 				<a class="navbar-brand"
-					href="#"><img src="assets/images/Picture2.png" alt="navbar logo" class="img-fluid navbar-logo"></a>
+					href="#"><img src="assets/images/new-logo.png" alt="navbar logo" class="img-fluid navbar-logo"></a>
 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
 <span class="navbar-toggler-icon"></span>
 </button>
