formatted the pages and styles

--- a/music.html
+++ b/music.html
@@ -153,61 +153,61 @@
 	
 	<!--start of video selling section-->
 	<div class="container-fluid video-selling-container">
-         <h2 class="video-selling-heading"> <span> Trending Albums in Sale </span></h2>
-		<div class="row">
+        <h2 class="video-selling-heading"> <span> Trending Albums in Sale </span></h2>
+		    <div class="row">
 			<!--first column-->
-			<div class="col-md-6 col-sm-12 align-items-center">
+			    <div class="col-md-6 col-sm-12 align-items-center">
 	
-				<!--start of first card for video section-->
+				    <!--start of first card for video section-->
 	
-				<div class="card align-items-center video-card">
-					<img class="card-img-top video-image" src="assets/images/exo-obsession.jpg" alt="Exo obsession album">
-					<div class="card-body">
-						<h5 class="card-text exo-card-one"> <span>Exo Obsession Video</span></h5>
+				    <div class="card align-items-center video-card">
+					    <img class="card-img-top video-image" src="assets/images/exo-obsession.jpg" alt="Exo obsession album">
+					        <div class="card-body">
+						        <h5 class="card-text exo-card-one"> <span>Exo Obsession Video</span></h5>
 	
-						<!--drop down section-->
+						        <!--drop down section-->
 	
-						<div class="dropdown">
-							<button class="btn btn-secondary btn--card1 dropdown-toggle align-items-center" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-	                         Buy Now</button>
-							<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-								<a class="dropdown-item" href=" https://www.amazon.com/EXO-Obsession-Folded-Poster-Photocards/dp/B081N4RQDB/ref=sr_1_5?crid=39ZXK76L8TWPK&keywords=exo+obsession+album&qid=1583213789&sprefix=obsession+album+%2Caps%2C219&sr=8-5">Amazon Prime</a>
-								<a class="dropdown-item" href="https://music.apple.com/us/album/obsession-the-6th-album/1488308374">Apple Music</a>
+						        <div class="dropdown">
+							        <button class="btn btn-secondary btn--card1 dropdown-toggle align-items-center" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+	                                    Buy Now</button>
+							            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+								            <a class="dropdown-item" href=" https://www.amazon.com/EXO-Obsession-Folded-Poster-Photocards/dp/B081N4RQDB/ref=sr_1_5?crid=39ZXK76L8TWPK&keywords=exo+obsession+album&qid=1583213789&sprefix=obsession+album+%2Caps%2C219&sr=8-5">Amazon Prime</a>
+								            <a class="dropdown-item" href="https://music.apple.com/us/album/obsession-the-6th-album/1488308374">Apple Music</a>
 	
-							</div>
-						</div>
+							            </div>
+						        </div>
 	
-						<!--end of drop down section-->
+						        <!--end of drop down section-->
 	
-					</div>
-				</div>
+				    	    </div>
+				    </div>
 	
-				<!--end of first card video section-->
-			</div>
-			<!--end of first column-->
+				    <!--end of first card video section-->
+			    </div>
+			    <!--end of first column-->
 	
-			<!--second column-->
-			<div class="col-md-6 col-sm-12 align-items-center">
+			    <!--second column-->
+			    <div class="col-md-6 col-sm-12 align-items-center">
 	
-				<!--start of second card for video section-->
+				    <!--start of second card for video section-->
 	
-				<div class="card align-items-center video-card">
-					<img class="card-img-top video-image" src="assets/images/dont-messup-my-tempo.jpg" alt="Dont Mess Up album">
-					<div class="card-body">
-						<h5 class="card-text exo-card-one"><span> Don't Mess My Tempo </span></h5>
+				    <div class="card align-items-center video-card">
+					    <img class="card-img-top video-image" src="assets/images/dont-messup-my-tempo.jpg" alt="Dont Mess Up album">
+					        <div class="card-body">
+						        <h5 class="card-text exo-card-one"><span> Don't Mess My Tempo </span></h5>
 	
-						<!--drop down section-->
+						        <!--drop down section-->
 	
-						<div class="dropdown">
-							<button class="btn btn-secondary btn--card1 dropdown-toggle align-items-center" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-	                            Buy Now</button>
-							<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-								<a class="dropdown-item" href=" https://www.amazon.com/EXO-Andante-Photocard-Pre-Order-Photocards/dp/B07J18YKZ1/ref=asc_df_B07J18YKZ1/?tag=hyprod-20&linkCode=df0&hvadid=343362590049&hvpos=&hvnetw=g&hvrand=12986927351691890366&hvpone=&hvptwo=&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9027197&hvtargid=pla-561467022642&psc=1&tag=&ref=&adgrpid=70607507898&hvpone=&hvptwo=&hvadid=343362590049&hvpos=&hvnetw=g&hvrand=12986927351691890366&hvqmt=
+						        <div class="dropdown">
+							        <button class="btn btn-secondary btn--card1 dropdown-toggle align-items-center" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+	                                    Buy Now</button>
+							            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+								            <a class="dropdown-item" href=" https://www.amazon.com/EXO-Andante-Photocard-Pre-Order-Photocards/dp/B07J18YKZ1/ref=asc_df_B07J18YKZ1/?tag=hyprod-20&linkCode=df0&hvadid=343362590049&hvpos=&hvnetw=g&hvrand=12986927351691890366&hvpone=&hvptwo=&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9027197&hvtargid=pla-561467022642&psc=1&tag=&ref=&adgrpid=70607507898&hvpone=&hvptwo=&hvadid=343362590049&hvpos=&hvnetw=g&hvrand=12986927351691890366&hvqmt=
                                             &hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9027197&hvtargid=pla-561467022642">Amazon Prime</a>
-								<a class="dropdown-item" href=" https://music.apple.com/us/album/tempo/1440782229?i=1440782230">Apple Music</a>
+								            <a class="dropdown-item" href=" https://music.apple.com/us/album/tempo/1440782229?i=1440782230">Apple Music</a>
 	
-							</div>
-						</div>
+							            </div>
+						        z</div>
 	
 						<!--end of drop down section-->
 	
@@ -276,27 +276,28 @@
 					<div class="modal-content">
 						<div class="modal-header">
 							<h5 class="modal-title" id="exampleModalLabel">Sign Up To Whiskey Drop</h5>
-							<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                    </button>
+							    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
 						</div>
+                        
 						<div class="modal-body">
 							<form>
 								<div class="form-group">
 									<label for="firstName">First Name</label>
 									<input type="text" class="form-control" id="firstName" required>
 
-						</div>
-									<div class="form-group">
+						        </div>
+								<div class="form-group">
 										<label for="secondName">Second Name</label>
 										<input type="text" class="form-control" id="secondName" required>
 
-						</div>
-										<div class="form-group">
+						        </div>
+								<div class="form-group">
 											<label for="exampleInputEmail1">Email address</label>
 											<input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" required>
 											<small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-										</div>
+								</div>
 
 										<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
 										<button type="submit" class="btn btn-success">Submit</button>
