adding links to different pages

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 					<div class="collapse navbar-collapse" id="navbarNav">
 						<ul class="navbar-nav ml-auto">
 							<li class="nav-item">
-								<a class="nav-link active hvr-sweep-to-bottom" href="#">Home</a>
+								<a class="nav-link active hvr-sweep-to-bottom" href="index.html">Home</a>
 							</li>
 
 							<li class="nav-item">
@@ -111,19 +111,19 @@
 				</div>
 
 				<div class="col-12 social-links padding">
-					<a href="#"><i class="fa fa-facebook"></i>
+					<a href="https://www.facebook.com/weareoneEXO/"><i class="fa fa-facebook"></i>
 						<span class="sr-only">Facebook</span>
 					</a>
 
-					<a href="#"><i class="fa fa-twitter"></i>
+					<a href=" https://twitter.com/weareoneEXO?s=08"><i class="fa fa-twitter"></i>
 						<span class="sr-only">Twitter</span>
 					</a>
 
-					<a href="#"><i class="fa fa-instagram"></i>
+					<a href=" https://instagram.com/weareone.exo?igshid=1fbc7j7drli7h"><i class="fa fa-instagram"></i>
 						<span class="sr-only">Instagram</span>
 					</a>
 
-					<a href="#"><i class="fa fa-youtube"></i>
+					<a href="https://www.youtube.com/user/EXOK"><i class="fa fa-youtube"></i>
 						<span class="sr-only">You Tube</span>
 					</a>
 				</div>
