--- a/music.html
+++ b/music.html
@@ -26,13 +26,13 @@
                <div class="collapse navbar-collapse" id="navbarNav">
                   <ul class="navbar-nav ml-auto">
                      <li class="nav-item">
-                        <a class="nav-link active hvr-sweep-to-bottom" href="#">Home</a>
+                        <a class="nav-link active hvr-sweep-to-bottom" href="index.html">Home</a>
                      </li>
                      <li class="nav-item">
-                        <a class="nav-link hvr-sweep-to-bottom" href="#">Gallery</a>
+                        <a class="nav-link hvr-sweep-to-bottom" href="gallery.html">Gallery</a>
                      </li>
                      <li class="nav-item">
-                        <a class="nav-link hvr-sweep-to-bottom" href="#">Music</a>
+                        <a class="nav-link hvr-sweep-to-bottom" href="music.html">Music</a>
                      </li>
                      <li class="nav-item">
                         <a class="nav-link hvr-sweep-to-bottom" href="#">Tour</a>
@@ -186,16 +186,16 @@
                <h1 class="social-connect">Connect</h1>
             </div>
             <div class="col-12 social-links padding">
-               <a href="#"><i class="fa fa-facebook"></i>
+               <a href="https://www.facebook.com/weareoneEXO/"><i class="fa fa-facebook"></i>
                <span class="sr-only">Facebook</span>
                </a>
-               <a href="#"><i class="fa fa-twitter"></i>
+               <a href="https://twitter.com/weareoneEXO?s=08"><i class="fa fa-twitter"></i>
                <span class="sr-only">Twitter</span>
                </a>
-               <a href="#"><i class="fa fa-instagram"></i>
+               <a href="https://instagram.com/weareone.exo?igshid=1fbc7j7drli7h"><i class="fa fa-instagram"></i>
                <span class="sr-only">Instagram</span>
                </a>
-               <a href="#"><i class="fa fa-youtube"></i>
+               <a href="https://www.youtube.com/user/EXOK"><i class="fa fa-youtube"></i>
                <span class="sr-only">You Tube</span>
                </a>
             </div>
@@ -227,7 +227,7 @@
          <div class="modal-dialog" role="document">
             <div class="modal-content">
                <div class="modal-header">
-                  <h5 class="modal-title" id="exampleModalLabel">Sign Up To Whiskey Drop</h5>
+                  <h5 class="modal-title" id="exampleModalLabel">Sign Up for Membership Coupon</h5>
                   <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                   <span aria-hidden="true">&times;</span>
                   </button>
@@ -257,7 +257,7 @@
       </div>
       <!--end of modal section for footer-->
       <!--end of footer section-->
-      
+
       <!--script section-->
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
