--- a/gallery.html
+++ b/gallery.html
@@ -35,7 +35,7 @@
                         <a class="nav-link hvr-sweep-to-bottom" href="music.html">Music</a>
                      </li>
                      <li class="nav-item">
-                        <a class="nav-link hvr-sweep-to-bottom" href="#">Tour</a>
+                        <a class="nav-link hvr-sweep-to-bottom" href="tour.html">Tour</a>
                      </li>
                   </ul>
                </div>
@@ -202,7 +202,7 @@
             <!--start of modal 7-->
             <div class="col-lg-3 col-md-4 col-sm-6 gallery-column">
                <a class="d-block">
-               <img class="gallery-image hvr-grow-shadow" src="assets/images/exo-img7.jpg" data-toggle="modal" data-target="#image-seven">
+                <img class="gallery-image hvr-grow-shadow" src="assets/images/exo-img7.jpg" data-toggle="modal" data-target="#image-seven">
                </a>
                <!-- start of Modal Body 7!-->
                <div class="modal" tabindex="-1" role="dialog"
@@ -228,7 +228,7 @@
             <div
                class="col-lg-3 col-md-4 col-sm-6 gallery-column">
                <a class="d-block">
-               <img class="gallery-image hvr-grow-shadow" src="assets/images/exo-img8.jpg" data-toggle="modal" data-target="#image-eight">
+                <img class="gallery-image hvr-grow-shadow" src="assets/images/exo-img8.jpg" data-toggle="modal" data-target="#image-eight">
                </a>
                <!-- start of Modal Body 8 !-->
                <div class="modal" tabindex="-1"
