--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 							</li>
 
 							<li class="nav-item">
-								<a class="nav-link hvr-sweep-to-bottom" href="#">Tour</a>
+								<a class="nav-link hvr-sweep-to-bottom" href="tour.html">Tour</a>
 							</li>
 						</ul>
 
@@ -60,15 +60,15 @@
 				<div class="d-none d-sm-block">
 					<img src="assets/images/exo-logo2.jpg" class="img-fluid img-thumbnail justify-center intro-pic" alt="logo">
                 </div>
-				</div>
+			</div>
 
-				<div class="col-sm-6 col-md-5">
-					<h1 class="introduction-header display-4 text-center"><strong>EXO</strong></h1>
-					<p class="lead intro-statement text-center">We are One</p>
-				</div>
+			<div class="col-sm-6 col-md-5">
+				<h1 class="introduction-header display-4 text-center"><strong>EXO</strong></h1>
+				<p class="lead intro-statement text-center">We are One</p>
 			</div>
 		</div>
-		<!--end of Introduction section-->
+	</div>
+	<!--end of Introduction section-->
 
 		<!--about section-->
 		<div class="container-fluid about-container">
@@ -78,24 +78,33 @@
 				</div>
 				<!--about text section-->
 				<div class="col-sm-4 col-md-6 col-lg-8">
-					<h1 class="about-title"><strong> About Us </strong></h1>
+					<h1 class="about-title"><strong> About </strong></h1>
 					<hr class="about-underline">
 
-					<p class="lead about-para">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione
-						deleniti
-						officia rem id accusamus expedita veniam alias optio provident placeat blanditiis, quas
-						temporibus
-						consequuntur repellat totam ad tenetur nihil distinctio.</p>
-					<p class="lead about-para">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione
-						deleniti
-						officia rem id accusamus expedita veniam alias optio provident placeat blanditiis, quas
-						temporibus
-						consequuntur repellat totam ad tenetur nihil distinctio.</p>
-					<p class="lead about-para">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione
-						deleniti
-						officia rem id accusamus expedita veniam alias optio provident placeat blanditiis, quas
-						temporibus
-						consequuntur repellat totam ad tenetur nihil distinctio.</p>
+					<p class="lead about-para">EXO is a South Korean – Chinese boy band created by Lee Soo Man,
+						founder of SM Entertainment, in 2011. Originally formed of 8 Korean members and 4 Chinese
+						members,
+						the 12-member group showcased their official debut on April 8, 2012 with their first mini album
+						Mama.
+						Mama peaked the South Korean Gaon Musical Chart and placed 8th on the Billboard World Albums
+						Chart.
+						The group initially performed simultaneously as two sub units EXO-K (Korean Version) and EXO-M
+						(Mandarin)
+						in South Korea and China. The sensational break for the group came in 2013 with the title songs
+						“Growl”
+						and “Wolf” from their first repackaged album XOXO with record-breaking wins across South Korea,
+						China, Japan and many other Asian countries along with creating a major foothold in the
+						international music world and fandom.
+						The years following the success and recognition post the album is affectionately mentioned as
+						the “Growl-Wolf Era”. The group witnessed departure of three members during 2014-2015 due to
+						injuries and personal issues. </p>
+
+					<!--start of about Modal button section-->
+					<button type="button" class="btn btn-light mb-3" data-toggle="modal" data-target="#aboutModal">
+                            Read More
+                        </button>
+					<!--end of about Modal button section-->
+
 
 				</div>
 
@@ -200,6 +209,95 @@
 
 		<!--end of modal section-->
 		<!--end of footer section-->
+
+		<!--start of about Modal section-->
+
+		<div class="modal fade" id="aboutModal" tabindex="-1" role="dialog" aria-labelledby="aboutModalLabel"
+			aria-hidden="true">
+			<div class="modal-dialog" role="document">
+				<div class="modal-content">
+					<div class="modal-header">
+						<h5 class="modal-title" id="aboutModalLabel">Continue Reading About Exo</h5>
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+					</div>
+
+					<div class="modal-body">
+						<h3>The current line-up of the group is as follows:</h3>
+						<!--About Table-->
+						<table class="lead">
+							<tr>
+								<td>Suho (Kim Junmyeon): </td>
+								<td>Leader, Lead Vocalist</td>
+							</tr>
+
+                            <tr>
+								<td>Xiumin (Kim Minseok): </td>
+								<td>Lead Vocalist, Lead dancer, Rapper</td>
+							</tr>
+
+                            <tr>
+								<td>Lay (Zhang Yixing): </td>
+								<td>Main dancer, Vocalist, Rapper</td>
+							</tr>
+
+                            <tr>
+								<td>Beakhyun (Byun Baekhyun): </td>
+								<td>Main Vocalist</td>
+							</tr>
+
+                            <tr>
+								<td>Chen (Kim Jongdae): </td>
+								<td>Main Vocalist</td>
+							</tr>
+
+                            <tr>
+								<td>Chanyeol (Park Chanyeol): </td>
+								<td>Main rapper, Vocalist, Visual</td>
+							</tr>
+
+                            <tr>
+								<td>Kai (Kim Jongin): </td>
+								<td>Main Dancer, Rapper, Vocalist, Visual</td>
+							</tr>
+
+                            <tr>
+								<td>D. O. (Do Kyungsoo): </td>
+								<td>Main Vocalist</td>
+							</tr>
+
+                            <tr>
+								<td>Sehun (Oh Sehun): </td>
+								<td>Lead Dancer, Lead Rapper, Visual</td>
+							</tr>
+                            
+						</table>
+
+                        <hr>
+
+                        <p class="lead">EXO has again rewritten their records multiple times throughout the years 
+                            by the continued huge success of their albums Exodus (2015), Ex’act (2016), The War (2017), 
+                            Don’t Mess Up My Tempo (2018) and Obsession (2019). The title songs of each and every one of these albums
+                            has been massive hits on both local charts and global charts like the Oricon Albums Chart in Japan and 
+                            the Billboard World Albums Chart. The “Power” track from the album The War became the first K-pop song to 
+                            be performed at The Dubai Fountain at the Burj Khalifa lake in October 2018. In the same year EXO performed 
+                            at the closing ceremony of the Winter Olympics held in Pyeongyang as the “nation’s pick”.</p>
+                        
+                        <p class="lead">EXO has continued to attract music lovers of wide diversity in race, 
+                            region and age to their fanbase by their unique and soulful music. It has even become for the fans
+                            to celebrate their Christmas with EXO’s winter albums. EXO continues to rule the world of music as
+                            the Kings of K-pop.</p>
+					</div>
+
+					<div class="modal-footer">
+						<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<!--end of about Modal section-->
 
 		<!--script section-->
 
