--- a/music.html
+++ b/music.html
@@ -35,7 +35,7 @@
                         <a class="nav-link hvr-sweep-to-bottom" href="music.html">Music</a>
                      </li>
                      <li class="nav-item">
-                        <a class="nav-link hvr-sweep-to-bottom" href="#">Tour</a>
+                        <a class="nav-link hvr-sweep-to-bottom" href="tour.html">Tour</a>
                      </li>
                   </ul>
                </div>
