code validated using validator

--- a/music.html
+++ b/music.html
@@ -59,7 +59,7 @@
             <div class="col-lg-3 col-md-6 col-sm-12 music-column">
                <div class="embed-responsive embed-responsive-16by9">
                   <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/uxmP4b2a0uY"
-                     frameborder="0" allow="autoplay; encrypted-media;" allowfullscreen></iframe>
+                     style="border:0;" allow="autoplay; encrypted-media;" allowfullscreen></iframe>
                </div>
             </div>
             <!--end of first column-->
@@ -67,7 +67,7 @@
             <div class="col-lg-3 col-md-6 col-sm-12 music-column">
                <div class="embed-responsive embed-responsive-16by9">
                   <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/I3dezFzsNss"
-                     frameborder="0" allow="autoplay; encrypted-media;" allowfullscreen></iframe>
+                     style="border:0;" allow="autoplay; encrypted-media;" allowfullscreen></iframe>
                </div>
             </div>
             <!--end of second column-->
@@ -75,7 +75,7 @@
             <div class="col-lg-3 col-md-6 col-sm-12 music-column">
                <div class="embed-responsive embed-responsive-16by9">
                   <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/KSH-FVVtTf0"
-                     frameborder="0" allow="autoplay; encrypted-media;" allowfullscreen></iframe>
+                     style="border:0;" allow="autoplay; encrypted-media;" allowfullscreen></iframe>
                </div>
             </div>
             <!--end of third column-->
@@ -83,7 +83,7 @@
             <div class="col-lg-3 col-md-6 col-sm-12 music-column">
                <div class="embed-responsive embed-responsive-16by9">
                   <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/yVLxRXoLaas"
-                     frameborder="0" allow="autoplay; encrypted-media;" allowfullscreen></iframe>
+                     style="border:0;" allow="autoplay; encrypted-media;" allowfullscreen></iframe>
                </div>
             </div>
             <!--end of fourth column-->		
@@ -97,7 +97,7 @@
             <div class="col-lg-3 col-md-6 col-sm-12 music-column">
                <div class="embed-responsive embed-responsive-16by9">
                   <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/DisqruN2EAw"
-                     frameborder="0" allow="autoplay; encrypted-media;" allowfullscreen></iframe>
+                     style="border:0;" allow="autoplay; encrypted-media;" allowfullscreen></iframe>
                </div>
             </div>
             <!--end of first column-->
@@ -105,7 +105,7 @@
             <div class="col-lg-3 col-md-6 col-sm-12 music-column">
                <div class="embed-responsive embed-responsive-16by9">
                   <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/TUal746AO6c"
-                     frameborder="0" allow="autoplay; encrypted-media;" allowfullscreen></iframe>
+                     style="border:0;" allow="autoplay; encrypted-media;" allowfullscreen></iframe>
                </div>
             </div>
             <!--end of second column-->
@@ -113,7 +113,7 @@
             <div class="col-lg-3 col-md-6 col-sm-12 music-column">
                <div class="embed-responsive embed-responsive-16by9">
                   <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/kdqHigVv-Kk"
-                     frameborder="0" allow="autoplay; encrypted-media;" allowfullscreen></iframe>
+                     style="border:0;" allow="autoplay; encrypted-media;" allowfullscreen></iframe>
                </div>
             </div>
             <!--end of third column-->
@@ -136,9 +136,9 @@
 
                      <!--drop down section-->
                      <div class="dropdown">
-                        <button class="btn btn-secondary btn--card1 dropdown-toggle align-items-center" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <button class="btn btn-secondary btn--card1 dropdown-toggle align-items-center" type="button" id="dropdownMenuButton1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Buy Now</button>
-                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
                            <a class="dropdown-item" href=" https://www.amazon.com/EXO-Obsession-Folded-Poster-Photocards/dp/B081N4RQDB/ref=sr_1_5?crid=39ZXK76L8TWPK&keywords=exo+obsession+album&qid=1583213789&sprefix=obsession+album+%2Caps%2C219&sr=8-5">Amazon Prime</a>
                            <a class="dropdown-item" href="https://music.apple.com/us/album/obsession-the-6th-album/1488308374">Apple Music</a>
                         </div>
@@ -161,11 +161,11 @@
                      
                      <!--drop down section-->
                      <div class="dropdown">
-                        <button class="btn btn-secondary btn--card1 dropdown-toggle align-items-center" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <button class="btn btn-secondary btn--card1 dropdown-toggle align-items-center" type="button" id="dropdownMenuButton2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Buy Now </button>
-                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                           <a class="dropdown-item" href=" https://www.amazon.com/EXO-Andante-Photocard-Pre-Order-Photocards/dp/B07J18YKZ1/ref=asc_df_B07J18YKZ1/?tag=hyprod-20&linkCode=df0&hvadid=343362590049&hvpos=&hvnetw=g&hvrand=12986927351691890366&hvpone=&hvptwo=&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9027197&hvtargid=pla-561467022642&psc=1&tag=&ref=&adgrpid=70607507898&hvpone=&hvptwo=&hvadid=343362590049&hvpos=&hvnetw=g&hvrand=12986927351691890366&hvqmt=
-                              &hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9027197&hvtargid=pla-561467022642">Amazon Prime</a>
+                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton2">
+                           <a class="dropdown-item" href="https://www.amazon.com/EXO-Andante-Photocard-Pre-Order-Photocards/dp/B07J18YKZ1/ref=pd_sbs_15_1/141-3284142-1449360?_encoding=UTF8&pd_rd_i=B07J18YKZ1&pd_rd_r=49594d06-09e1-4227-839a-09a515b318c8&pd_rd_w=GCgD0&pd_rd_wg=MIK3t&pf_rd_p=7cd8f929-4345-4bf2-a554-7d7588b3dd5f&pf_rd_r=V18CCR9ZXACA45MKFXSQ&psc=1&refRID=V18CCR9ZXACA45MKFXSQ">Amazon Prime
+                           </a>
                            <a class="dropdown-item" href=" https://music.apple.com/us/album/tempo/1440782229?i=1440782230">Apple Music</a>
                         </div>
                      </div>
