--- a/tour.html
+++ b/tour.html
@@ -58,7 +58,7 @@
 		<!--responsive table for tour details-->
 		<div class="class-table-responsive-lg">
             <!--start of tour table-->
-			<table class="table table-hover table-light">
+			<table class="table table-hover table-light ml-0">
 				<thead>
 					<tr>
 						<th scope="col">DATE</th>
@@ -71,28 +71,28 @@
 				<tbody>
 					<tr>
 						<th scope="row">MAY 12, 2020</th>
-						<td>FALLSVIEW CASINO ENTERTAINMENT CENTRE</td>
+						<td>FALLSVIEW CASINO </td>
 						<td>NIAGARA FALLS, ON</td>
 						<td><button class="btn btn-secondary disabled">SOLD OUT</button></td>
 					</tr>
 
 					<tr>
 						<th scope="row">MAY 12, 2020</th>
-						<td>FALLSVIEW CASINO ENTERTAINMENT CENTRE</td>
+						<td>FALLSVIEW CASINO</td>
 						<td>NIAGARA FALLS, ON</td>
 						<td><button class="btn btn-secondary disabled">SOLD OUT</button></td>
 					</tr>
 
 					<tr>
 						<th scope="row">MAY 12, 2020</th>
-						<td>FALLSVIEW CASINO ENTERTAINMENT CENTRE</td>
+						<td>FALLSVIEW CASINO </td>
 						<td>NIAGARA FALLS, ON</td>
                         <td><button class="btn btn-secondary disabled">BOOKING STARTS ON JUNE</button></td>
 					</tr>
 
                     <tr>
 						<th scope="row">MAY 12, 2020</th>
-						<td>FALLSVIEW CASINO ENTERTAINMENT CENTRE</td>
+						<td>FALLSVIEW CASINO </td>
 						<td>NIAGARA FALLS, ON</td>
                         <td><button class="btn btn-secondary disabled">BOOKING STARTS ON JUNE</button></td>
 					</tr>
