--- a/gallery.html
+++ b/gallery.html
@@ -55,7 +55,7 @@
             <!-- start of Modal 1 !-->
             <div class="col-lg-3 col-md-4 col-sm-6 gallery-column">
                <a class="">
-               <img class="gallery-image hvr-grow-shadow" src="assets/images/exo-img1.jpg" data-toggle="modal" data-target="#image-one">
+               <img class="gallery-image hvr-grow-shadow" src="assets/images/exo-img1.jpg" data-toggle="modal" data-target="#image-one" alt="Image one">
                </a>
                <!-- start of Modal Body 1 !-->
                <div class="modal" tabindex="-1" role="dialog" id="image-one" aria-hidden="true">
@@ -67,7 +67,7 @@
                            </button>
                         </div>
                         <div class="modal-body">
-                           <img class="image-width" src="assets/images/exo-img1.jpg" data-toggle="modal" data-target="#image-one">
+                           <img class="image-width" src="assets/images/exo-img1.jpg" data-toggle="modal" data-target="#image-one" alt="Image one">
                         </div>
                      </div>
                   </div>
@@ -79,7 +79,7 @@
             <!-- start of Modal 2 !-->
             <div class="col-lg-3 col-md-4 col-sm-6 gallery-column">
                <a class="d-block">
-               <img class="gallery-image hvr-grow-shadow" src="assets/images/exo-img2.jpg" data-toggle="modal" data-target="#image-two">
+               <img class="gallery-image hvr-grow-shadow" src="assets/images/exo-img2.jpg" data-toggle="modal" data-target="#image-two"  alt="Image two">
                </a>
                <!-- start of Modal Body 2 !-->
                <div class="modal" tabindex="-1" role="dialog" id="image-two" aria-hidden="true">
@@ -91,7 +91,7 @@
                            </button>
                         </div>
                         <div class="modal-body">
-                           <img class="image-width" src="assets/images/exo-img2.jpg" data-toggle="modal" data-target="#image-two">
+                           <img class="image-width" src="assets/images/exo-img2.jpg" data-toggle="modal" data-target="#image-two" alt="Image two">
                         </div>
                      </div>
                   </div>
@@ -103,7 +103,7 @@
             <!-- start of Modal 3 !-->
             <div class="col-lg-3 col-md-4 col-sm-6 gallery-column">
                <a class="d-block">
-               <img class="gallery-image hvr-grow-shadow" src="assets/images/exo-img3.jpg" data-toggle="modal" data-target="#image-three">
+               <img class="gallery-image hvr-grow-shadow" src="assets/images/exo-img3.jpg" data-toggle="modal" data-target="#image-three" alt="Image three">
                </a>
                <!-- start of Modal Body 3 !-->
                <div class="modal" tabindex="-1" role="dialog" id="image-three" aria-hidden="true">
@@ -115,7 +115,7 @@
                            </button>
                         </div>
                         <div class="modal-body">
-                           <img class="image-width" src="assets/images/exo-img3.jpg" data-toggle="modal" data-target="#image-three">
+                           <img class="image-width" src="assets/images/exo-img3.jpg" data-toggle="modal" data-target="#image-three" alt="Image three">
                         </div>
                      </div>
                   </div>
@@ -127,7 +127,7 @@
             <!--start of modal 4-->
             <div class="col-lg-3 col-md-4 col-sm-6 gallery-column">
                <a class="d-block">
-               <img class="gallery-image hvr-grow-shadow" src="assets/images/exo-img4.jpg" data-toggle="modal" data-target="#image-four">
+               <img class="gallery-image hvr-grow-shadow" src="assets/images/exo-img4.jpg" data-toggle="modal" data-target="#image-four" alt="Image four">
                </a>
                <!-- start of Modal Body 4 !-->
                <div class="modal" tabindex="-1" role="dialog" id="image-four"
@@ -140,7 +140,7 @@
                            </button>
                         </div>
                         <div class="modal-body">
-                           <img class="image-width" src="assets/images/exo-img4.jpg" data-toggle="modal" data-target="#image-four">
+                           <img class="image-width" src="assets/images/exo-img4.jpg" data-toggle="modal" data-target="#image-four" alt="Image four">
                         </div>
                      </div>
                   </div>
@@ -152,7 +152,7 @@
             <!--start of modal 5-->
             <div class="col-lg-3 col-md-4 col-sm-6 gallery-column">
                <a class="d-block">
-               <img class="gallery-image hvr-grow-shadow" src="assets/images/exo-img5.jpg" data-toggle="modal" data-target="#image-five">
+               <img class="gallery-image hvr-grow-shadow" src="assets/images/exo-img5.jpg" data-toggle="modal" data-target="#image-five" alt="Image five">
                </a>
                <!-- start of Modal Body 5 !-->
                <div class="modal" tabindex="-1" role="dialog" id="image-five"
@@ -165,7 +165,7 @@
                            </button>
                         </div>
                         <div class="modal-body">
-                           <img class="image-width" src="assets/images/exo-img5.jpg" data-toggle="modal" data-target="#image-five">
+                           <img class="image-width" src="assets/images/exo-img5.jpg" data-toggle="modal" data-target="#image-five" alt="Image five">
                         </div>
                      </div>
                   </div>
@@ -177,7 +177,7 @@
             <!--start of modal 6-->
             <div class="col-lg-3 col-md-4 col-sm-6 gallery-column">
                <a class="d-block">
-               <img class="gallery-image hvr-grow-shadow" src="assets/images/exo-img6.jpg" data-toggle="modal" data-target="#image-six">
+               <img class="gallery-image hvr-grow-shadow" src="assets/images/exo-img6.jpg" data-toggle="modal" data-target="#image-six" alt="Image six">
                </a>
                <!-- start of Modal Body 6 !-->
                <div class="modal" tabindex="-1" role="dialog"
@@ -190,7 +190,7 @@
                            </button>
                         </div>
                         <div class="modal-body">
-                           <img class="image-width" src="assets/images/exo-img6.jpg" data-toggle="modal" data-target="#image-six">
+                           <img class="image-width" src="assets/images/exo-img6.jpg" data-toggle="modal" data-target="#image-six" alt="Image six">
                         </div>
                      </div>
                   </div>
@@ -202,7 +202,7 @@
             <!--start of modal 7-->
             <div class="col-lg-3 col-md-4 col-sm-6 gallery-column">
                <a class="d-block">
-                <img class="gallery-image hvr-grow-shadow" src="assets/images/exo-img7.jpg" data-toggle="modal" data-target="#image-seven">
+                <img class="gallery-image hvr-grow-shadow" src="assets/images/exo-img7.jpg" data-toggle="modal" data-target="#image-seven" alt="Image seven">
                </a>
                <!-- start of Modal Body 7!-->
                <div class="modal" tabindex="-1" role="dialog"
@@ -215,7 +215,7 @@
                            </button>
                         </div>
                         <div class="modal-body">
-                           <img class="image-width" src="assets/images/exo-img7.jpg" data-toggle="modal" data-target="#image-seven">
+                           <img class="image-width" src="assets/images/exo-img7.jpg" data-toggle="modal" data-target="#image-seven" alt="Image seven">
                         </div>
                      </div>
                   </div>
@@ -228,7 +228,7 @@
             <div
                class="col-lg-3 col-md-4 col-sm-6 gallery-column">
                <a class="d-block">
-                <img class="gallery-image hvr-grow-shadow" src="assets/images/exo-img8.jpg" data-toggle="modal" data-target="#image-eight">
+                <img class="gallery-image hvr-grow-shadow" src="assets/images/exo-img8.jpg" data-toggle="modal" data-target="#image-eight" alt="Image eight">
                </a>
                <!-- start of Modal Body 8 !-->
                <div class="modal" tabindex="-1"
@@ -243,7 +243,7 @@
                            </button>
                         </div>
                         <div class="modal-body">
-                           <img class="image-width" src="assets/images/exo-img8.jpg" data-toggle="modal" data-target="#image-eight">
+                           <img class="image-width" src="assets/images/exo-img8.jpg" data-toggle="modal" data-target="#image-eight" alt="Image eight">
                         </div>
                      </div>
                   </div>
