--- a/music.html
+++ b/music.html
@@ -29,6 +29,9 @@
                         <a class="nav-link active hvr-sweep-to-bottom" href="index.html">Home</a>
                      </li>
                      <li class="nav-item">
+                        <a class="nav-link active hvr-sweep-to-bottom" href="index.html#About">About</a>
+                     </li>
+                     <li class="nav-item">
                         <a class="nav-link hvr-sweep-to-bottom" href="gallery.html">Gallery</a>
                      </li>
                      <li class="nav-item">
